# ParallelTimeSeriesMining

./: CMakeLists.txt  README.md  batch.sh  conanfile.txt  motifs.cpp  outliers.cpp
data/: 10000.TRAIN  synth16d.txt
datasets/agrodata/: agrodata.TRAIN  agrodata.csv
datasets/audio/: audio.csv
datasets/ucayalli/: ucayalli.TEST
src/: CMakeLists.txt
src/MotifDiscovery/: MotifParameters.h  ParallelRandomProjection.h  RandomProjection.h  SAX.h  TSUtils.h  Utils.h  Word.h  WordElem.h
src/OutlierDetection/: CUDAHashFile.h  DistanceEvaluator.h  NNSearchIndex.h  ResultSet.h
